# Simple_ID_Lottery_ElaVersion

./: .gitignore  .gitmodules  AGENTS.md  CMakeLists.txt  CMakeUserPresets.json  ELA_WIDGET_API.md  README.md
include/ElaWidgetTools/ElaWidgetTools/: CMakeLists.txt  ElaAcrylicUrlCard.cpp  ElaCalendarPicker.cpp  ElaIcon.cpp  ElaIconButton.cpp  ElaKeyBinder.cpp  ElaMenu.cpp  ElaMenuBar.cpp  ElaMultiSelectComboBox.cpp  ElaText.cpp  ElaToolBar.cpp  ElaToolButton.cpp
include/ElaWidgetTools/ElaWidgetTools/DeveloperComponents/: ElaBreadcrumbBarDelegate.cpp  ElaCheckBoxStyle.cpp  ElaComboBoxStyle.cpp  ElaDrawerHeader.cpp  ElaFooterDelegate.cpp  ElaMenuBarStyle.cpp  ElaMenuStyle.cpp  ElaNavigationStyle.cpp  ElaRollerPickerContainer.cpp  ElaSpinBoxStyle.cpp  ElaSuggestDelegate.cpp  ElaTabBarStyle.cpp  ElaToolBarStyle.cpp  ElaToolButtonStyle.cpp  ElaTreeViewStyle.cpp
include/ElaWidgetTools/ElaWidgetTools/private/: ElaMessageBarPrivate.cpp
src/: main.cpp  mw_header.h  mw_resource.qrc  mw_source.cpp  mw_ui.ui  page_content.ui  pl_AddDialog_header.hpp  pl_AddDialog_source.cpp  pl_AddDialog_ui.ui
